[metadata]
name = caisopy-b2b
version = 1.0.0
author = John Huetter
author_email = johhue@gmail.com
summary = CAISO Functions for Submitting B2B Messages to CAISO
maintainer = CAISO
maintainer_email = jhuetter@caiso.com
description-file = README.rst
license = BSD
home-page = https://bitbucket.wepex.net/scm/fp/caisopy-b2b.git
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages = caisopy_b2b

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[flake8]
extend-ignore = E203, E266, E501
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
profile = black
multi_line_output = 3
